--- a/dvc.yaml
+++ b/dvc.yaml
@@ -8,7 +8,7 @@ stages:
         - artifacts/data_ingestion/Chicken-fecal-images
     
     prepare_base_model:
-      cmd: python src/cnnClassifier/pipeline/stage_02_data_ingestion.py
+      cmd: python src/cnnClassifier/pipeline/stage_02_prepare_base_model.py
       deps:
         - src/cnnClassifier/pipeline/stage_02_prepare_base_model.py
         - config/config.yaml
@@ -17,7 +17,7 @@ stages:
         - INCLUDE_TOP
         - CLASSES
         - WEIGHTS
-        - LEARNING_RAGE
+        - LEARNING_RATE
       outs:
         - artifacts/prepare_base_model
     
@@ -25,7 +25,7 @@ stages:
       cmd: python src/cnnClassifier/pipeline/stage_03_training.py
       deps:
         - src/cnnClassifier/pipeline/stage_03_training.py
-        - src/cnnClassifier/components/prepare_callback.py
+        - src/cnnClassifier/components/prepare_callbacks.py
         - config/config.yaml
         - artifacts/data_ingestion/Chicken-fecal-images
         - artifacts/prepare_base_model
